<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CashFlow</string>
    <string name="menu_settings">Settings</string>
    <string name="balance_string">Balance</string>
    <string name="currency">HUF</string>
    <string name="balance_value">1234</string>
    <string name="add_expense_button">Add Expense</string>
    <string name="add_income_button">Add Income</string>
    <string name="list_expenses_button">List Expenses</string>
    <string name="list_incomes_button">List Incomes</string>
    <string name="title_activity_add_income">Add Income</string>
    <string name="date_label">Date: </string>
    <string name="amount_label">Amount:</string>
    <string name="notes_label">Notes:</string>
    <string name="amount_hint">0.00</string>
    <string name="title_activity_add_expense">Add Expense</string>
    <string name="title_activity_list_expenses">List Expenses</string>
    <string name="action_settings">Settings</string>
    <string name="main_no_items">No expenses to diplay</string>
    <string name="edit_button">Edit button</string>
    <string name="title_activity_list_incomes">List Incomes</string>
    <string name="hello_world">Hello world!</string>

</resources>